10th commit for back some code

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         margin: 0;
         }
 
+        /* Firefox */
+        input[type=number] {
+            -moz-appearance: textfield;
+        }
     </style>
 </head>
 <body>
